@@ -1,10 +1,14 @@
 New in svn version:
+
    * PW: the code can capture "signals". typically sent by batch queues
      when allowed time is close to expire, and terminate gracefully.
      Experimental, to be enabled at compile time (see the user guide)
    * TDDFPT: Implemented a restart option in turbo_Davidson
 
 Fixed in svn version:
+
+   * Kernel table for rVV10 nonlocal functional was not written to file,
+     breaking restart and postprocessing (no problem for scf)
    * Strange compilation bug on some IBM machines
    * Minor bug in ESM implementation
 
